--- a/V1.0/corporatecare.html
+++ b/V1.0/corporatecare.html
@@ -78,7 +78,7 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="faq.html">FAQs</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a class="cta-btn d-sm-block" href="appointment.html"><strong>Book an Appointment</strong></a></li>
+            <li><a class="cta-btn d-sm-block" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -118,7 +118,7 @@
               </p>
               <div class="call-to-action-3">
                 <div class="content"> 
-                  <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                  <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                 </div>
               </div>
             </div>
@@ -233,7 +233,7 @@
                   </ul>
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -262,7 +262,7 @@
                   
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -291,7 +291,7 @@
                   </p>
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -354,7 +354,7 @@
                                 </ul>
                                 <div class="call-to-action-3">
                                   <div class="col-lg-8 col-md-6 content d-flex flex-column justify-content-center order-last order-md-first">
-                                    <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                                    <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                                   </div>
                                 </div>
                               </div>
@@ -371,7 +371,7 @@
                                 </ul>
                                 <div class="call-to-action-3">
                                   <div class="col-lg-8 col-md-6 content d-flex flex-column justify-content-center order-last order-md-first">
-                                    <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                                    <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                                   </div>
                                 </div>
                               </div>
@@ -390,7 +390,7 @@
                                 </ul>
                                 <div class="call-to-action-3">
                                   <div class="col-lg-8 col-md-6 content d-flex flex-column justify-content-center order-last order-md-first">
-                                    <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                                    <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                                   </div>
                                 </div>
                               </div>
@@ -412,7 +412,7 @@
                                 </ul>
                                 <div class="call-to-action-3">
                                   <div class="col-lg-8 col-md-6 content d-flex flex-column justify-content-center order-last order-md-first">
-                                    <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                                    <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                                   </div>
                                 </div>
                               </div>
@@ -433,7 +433,7 @@
                                 </ul>
                                 <div class="call-to-action-3">
                                   <div class="col-lg-8 col-md-6 content d-flex flex-column justify-content-center order-last order-md-first">
-                                    <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                                    <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                                   </div>
                                 </div>
                               </div>
@@ -448,7 +448,7 @@
 
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -505,7 +505,7 @@
                 </ul>
               </div>
               <div class="plan-cta">
-                <a href="appointment.html" class="btn-plan">Book an Appointment</a>
+                <a class="btn-plan align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
               </div>
             </div>
           </div><!-- End Basic Plan -->
@@ -533,7 +533,7 @@
                 </ul>
               </div>
               <div class="plan-cta">
-                <a href="appointment.html" class="btn-plan">Book an Appointment</a>
+                <a class="btn-plan align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
               </div>
             </div>
           </div><!-- End Professional Plan -->
@@ -565,7 +565,7 @@
                 </ul>
               </div>
               <div class="plan-cta">
-                <a href="appointment.html" class="btn-plan">Book an Appointment</a>
+                <a class="btn-plan align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
               </div>
             </div>
           </div><!-- End Enterprise Plan -->
@@ -592,7 +592,7 @@
                 </ul>
               </div>
               <div class="plan-cta">
-                <a href="appointment.html" class="btn-plan">Book an Appointment</a>
+                <a class="btn-plan align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
               </div>
             </div>
           </div><!-- End Basic Plan -->
@@ -621,7 +621,7 @@
                 </ul>
               </div>
               <div class="plan-cta">
-                <a href="appointment.html" class="btn-plan">Book an Appointment</a>
+                <a class="btn-plan align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
               </div>
             </div>
           </div><!-- End Professional Plan -->
@@ -650,7 +650,7 @@
                 </ul>
               </div>
               <div class="plan-cta">
-                <a href="appointment.html" class="btn-plan">Book an Appointment</a>
+                <a class="btn-plan align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
               </div>
             </div>
           </div><!-- End Enterprise Plan -->
@@ -755,6 +755,11 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <!-- Calendly link widget begin -->
+  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+  <!-- Callendry JS Files -->
+  <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
 
 </body>
 
