--- a/V1.0/services.html
+++ b/V1.0/services.html
@@ -78,7 +78,7 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="faq.html">FAQs</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a class="cta-btn d-sm-block" href="appointment.html"><strong>Book an Appointment</strong></a></li>
+            <li><a class="cta-btn d-sm-block" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -258,7 +258,7 @@
                 </ul>
               </div>
               <div class="plan-cta">
-                  <a href="appointment.html" class="btn-plan">Book an Appointment</a>
+                  <a class="btn-plan" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
               </div>
             </div>
           </div><!-- End Basic Plan -->
@@ -287,7 +287,7 @@
                 </ul>
               </div>
               <div class="plan-cta">
-                  <a href="appointment.html" class="btn-plan">Book an Appointment</a>
+                <a class="btn-plan" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
               </div>
             </div>
           </div><!-- End Professional Plan -->
@@ -316,7 +316,7 @@
                 </ul>
               </div>
               <div class="plan-cta">
-                  <a href="appointment.html" class="btn-plan">Book an Appointment</a>
+                <a class="btn-plan" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
               </div>
             </div>
           </div><!-- End Enterprise Plan -->
@@ -356,7 +356,7 @@
                   </p>
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -399,7 +399,7 @@
                   </p>
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -423,7 +423,7 @@
                   </p>
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -456,7 +456,7 @@
                   </p>
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -492,7 +492,7 @@
                   </p>
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -528,7 +528,7 @@
                   </p>
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -581,7 +581,7 @@
                   </p>
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -612,7 +612,7 @@
                   </ul>
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -649,7 +649,7 @@
                   </p>
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -689,7 +689,7 @@
                   </p>
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -720,7 +720,7 @@
                   </p>
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -758,7 +758,7 @@
                   </p>
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -789,7 +789,7 @@
                   </p>
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -814,7 +814,7 @@
                   </p>
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -849,7 +849,7 @@
                   </ul>
                   <div class="call-to-action-3">
                     <div class="content"> 
-                      <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
+                      <a class="cta-btn align-self-start" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/pinkclinicng/30min?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ee5d9e'});return false;"><strong>Book an Appointment</strong></a>
                     </div>
                   </div>
                 </div>
@@ -961,6 +961,11 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <!-- Calendly link widget begin -->
+  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+  <!-- Callendry JS Files -->
+  <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
 
 </body>
 
