--- a/V1.0/faq.html
+++ b/V1.0/faq.html
@@ -396,6 +396,11 @@
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
+  <!-- Calendly link widget begin -->
+  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+  <!-- Callendry JS Files -->
+  <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+
 </body>
 
 </html>
