--- a/V1.0/blog_details_1.html
+++ b/V1.0/blog_details_1.html
@@ -118,7 +118,7 @@
             </p>
             <ol>
               <li>
-                Chlamydia 
+                <strong> Chlamydia</strong> 
                 <ul>
                   <li> 
                     Chlamydia is a bacterial infection that is sexually transmitted. 
@@ -130,7 +130,7 @@
                 </ul>
               </li>
               <li>
-                Gonorrhea 
+              <strong> Gonorrhea</strong>  
                 <ul>
                   <li> 
                     A higher percentage of the client we see at the clinic get Gonorrhea,  
@@ -141,7 +141,7 @@
                 </ul>
               </li>
               <li>
-                The Human Papiloma Virus 
+              <strong> The Human Papiloma Virus</strong>  
                 <ul>
                   <li> 
                     Hpv is a viral infection,  transmitted mostly through sex. 
