--- a/V1.0/blog_details_1.html
+++ b/V1.0/blog_details_1.html
@@ -118,36 +118,36 @@
             </p>
             <ol>
               <li>
-                <strong> Chlamydia</strong> 
-                <ul>
-                  <li> 
+                <strong> Chlamydia</strong> <br>
+                <!--<ul>
+                  <li> -->
                     Chlamydia is a bacterial infection that is sexually transmitted. 
                     It affect both men and women. Usually when Chlamydia is left u treated, 
                     the woman gets a pelvic Inflammation that causes blockage and damage to the fallopian tube. 
                     Men are also affected. The sperm carry ducts are also scarred and inflamed leading to a 
                     blockage that doesn't allow for sperm to pass through.
-                  </li>
-                </ul>
+                  <!--</li>
+                </ul>-->
               </li>
               <li>
-              <strong> Gonorrhea</strong>  
-                <ul>
-                  <li> 
+              <strong> Gonorrhea</strong> <br> 
+                <!--<ul>
+                  <li>--> 
                     A higher percentage of the client we see at the clinic get Gonorrhea,  
                     worse off is that sometimes it shows no symptom at all.<br>
                     Gonorrhea is a very common STI that can increase your changes of infertility if left untreated. 
                     Getting early care and treatment at the clinic helps prevent complications from the disease
-                  </li>
-                </ul>
+                 <!-- </li>
+                </ul>-->
               </li>
               <li>
-              <strong> The Human Papiloma Virus</strong>  
-                <ul>
-                  <li> 
+              <strong> The Human Papiloma Virus</strong> <br>
+                <!--<ul>
+                  <li> -->
                     Hpv is a viral infection,  transmitted mostly through sex. 
                     Hpv leads to Chnages in the cervix that  makes it difficult for you to get pregnant.
-                  </li>
-                </ul>
+                  <!--</li>
+                </ul>-->
               </li>
             </ol>
             <p>
