Updated testemonial slider + footer + image home

--- a/V1.0/blog.html
+++ b/V1.0/blog.html
@@ -174,16 +174,23 @@
 
     <div class="container footer-top">
       <div class="row gy-4">
-        <div class="col-lg-4 col-md-6 footer-about">
+        <div class="col-lg-6 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
             <span class="sitename">Pink Clinic</span>
           </a>
-          <p>Your health and confidentiality are our priority.</p>
+          <p>
+            Safe and Private Sexual Health Care Services.<br>
+            Your health and confidentiality are our priority.
+          </p>
           <div class="footer-contact pt-3">
-            <p><strong>Opening Hours</strong></p>
+            <p class="mt-3"><strong>Our Address</strong></p>
+            <p><strong>Mainland Lagos:</strong>13B Muri Folami street, Pako, Ogudu Gra, Lagos</p>
+            <p><strong>Island Lagos:</strong>16B Fola Osibo Street, Off Adebayo Doherty, Lekki Phase 1, Lagos</p>
+            <p class="mt-3"><strong>Opening Hours</strong></p>
             <p><strong>Mon - Sat:</strong> 8am - 6pm</p>
             <p><strong>Sunday:</strong> 9am - 3pm</p>
-            <p class="mt-3"><strong>Phone:</strong> <span><a href="tel:+2348149225771">+234 814 92257 71</a></span></p>
+            <p class="mt-3"><strong>Phone & Email</strong></p>
+            <p><strong>Phone:</strong> <span><a href="tel:+2348149225771">+234 814 92257 71</a></span></p>
             <p><strong>Phone:</strong> <span><a href="tel:+2348097818607">+234 809 78186 07</a></span></p>
             <p><strong>Email:</strong> <a href="mailto:info@pinkclinicng.com">info@PinkClinicNG.com</a></p>
           </div>
@@ -208,22 +215,9 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#">STI Screening</a></li>
-            <li><a href="#">STI Treatment</a></li>
+            <li><a href="services.html#pricing">STI Screening</a></li>
+            <li><a href="corporatecare.html#coktailbenefits">Cocktail sets and Benefits</a></li>
             <li><a href="#">Guidance & Counselling</a></li>
-            <li><a href="#">Confidential Care</a></li>
-            <li><a href="#">View All Services</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Legal</h4>
-          <ul>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
-            <li><a href="medical-disclaimer.html">Medical Disclaimer</a></li>
-            <li><a href="cookie-policy.html">Cookie Policy</a></li>
-            <li><a href="patient-rights.html">Patient Rights</a></li>
           </ul>
         </div>
 
