--- a/V1.0/corporatecare.html
+++ b/V1.0/corporatecare.html
@@ -347,6 +347,7 @@
                             <div class="faq-item">
                               <h3>Condom</h3>
                               <div class="faq-content">
+                                <img src="assets/img/corporatecare/condom.avif" alt="" class="img-fluid">
                                 <ul class="feature-benefits">
                                   <li><i class="bi bi-check-circle"></i> 98% effective</li>
                                   <li><i class="bi bi-check-circle"></i> Can help you prevent pregnancy</li>
@@ -365,6 +366,7 @@
                             <div class="faq-item ">
                               <h3>Emergency Contraceptive pills</h3>
                               <div class="faq-content">
+                                <img src="assets/img/corporatecare/cpill.webp" alt="" class="img-fluid">
                                 <ul class="feature-benefits">
                                   <li><i class="bi bi-check-circle"></i> An emergency pill to be used once  in a while. it's helps to prevent unwanted babies. It works by stopping you from ovulationg so you don’t get pregnant</li>
                                   <li><i class="bi bi-check-circle"></i> It is 87% effective.</li>
@@ -382,8 +384,9 @@
                             <div class="faq-item ">
                               <h3> Injections</h3>
                               <div class="faq-content">
+                                <img src="assets/img/corporatecare/cinjection.png" alt="" class="img-fluid">
                                 <ul class="feature-benefits">
-                                  <li><i class="bi bi-check-circle"></i> 3 monthly injection given in the uooer thigh or buttocks. You will need this every 3 month to continue preventing pregnancy.</li>
+                                  <li><i class="bi bi-check-circle"></i> 3 monthly injection given in the upper thigh or buttocks. You will need this every 3 month to continue preventing pregnancy.</li>
                                   <li><i class="bi bi-check-circle"></i> Works by preventing the woman body from releasing eggs so that pregnancy does not occur</li>
                                   <li><i class="bi bi-check-circle"></i> It also makes the lining of her womb thick so that the sperm cannot pass through to the eggs.</li>
                                   <li><i class="bi bi-check-circle"></i> It is 99% effective.</li>
@@ -401,6 +404,7 @@
                             <div class="faq-item ">
                               <h3>Implants</h3>
                               <div class="faq-content">
+                                <img src="assets/img/corporatecare/implant.png" alt="" class="img-fluid">
                                 <ul class="feature-benefits">
                                   <li><i class="bi bi-check-circle"></i> 99% effective.</li>
                                   <li><i class="bi bi-check-circle"></i> Every 3-5 years but can be removed at any time.</li>
@@ -423,6 +427,7 @@
                             <div class="faq-item ">
                               <h3>IUD</h3>
                               <div class="faq-content">
+                                <img src="assets/img/corporatecare/iud.png" alt="" class="img-fluid">
                                 <ul class="feature-benefits">
                                   <li><i class="bi bi-check-circle"></i> 99.7% effective</li>
                                   <li><i class="bi bi-check-circle"></i> 5- 10 years to prevent pregnancy</li>
@@ -477,7 +482,7 @@
 
         <div class="row gy-4">
           <!-- Basic Plan -->
-          <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
+          <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="pricing-card popular">
               <div class="plan-header">
                 <h3>Pink Baby Glow </h3>
@@ -511,7 +516,7 @@
           </div><!-- End Basic Plan -->
 
           <!-- Professional Plan -->
-          <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+          <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="pricing-card popular">
               <div class="plan-header">
                 <h3>Nutty POP </h3>
@@ -539,7 +544,7 @@
           </div><!-- End Professional Plan -->
 
           <!-- Enterprise Plan -->
-          <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
+          <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="pricing-card popular">
               <div class="plan-header">
                 <h3>Dump your Rump</h3>
@@ -571,7 +576,7 @@
           </div><!-- End Enterprise Plan -->
 
           <!-- Basic Plan -->
-          <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
+          <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="pricing-card popular">
               <div class="plan-header">
                 <h3>Weight loss</h3>
@@ -598,7 +603,7 @@
           </div><!-- End Basic Plan -->
 
           <!-- Professional Plan -->
-          <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+          <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="pricing-card popular">
               <div class="plan-header">
                 <h3>Anti-aging & Super cleanser </h3>
@@ -627,7 +632,7 @@
           </div><!-- End Professional Plan -->
 
           <!-- Enterprise Plan -->
-          <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
+          <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="pricing-card popular">
               <div class="plan-header">
                 <h3>Immune / Energy Booster</h3>
@@ -666,16 +671,23 @@
 
     <div class="container footer-top">
       <div class="row gy-4">
-        <div class="col-lg-4 col-md-6 footer-about">
+        <div class="col-lg-6 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
             <span class="sitename">Pink Clinic</span>
           </a>
-          <p>Your health and confidentiality are our priority.</p>
+          <p>
+            Safe and Private Sexual Health Care Services.<br>
+            Your health and confidentiality are our priority.
+          </p>
           <div class="footer-contact pt-3">
-            <p><strong>Opening Hours</strong></p>
+            <p class="mt-3"><strong>Our Address</strong></p>
+            <p><strong>Mainland Lagos:</strong>13B Muri Folami street, Pako, Ogudu Gra, Lagos</p>
+            <p><strong>Island Lagos:</strong>16B Fola Osibo Street, Off Adebayo Doherty, Lekki Phase 1, Lagos</p>
+            <p class="mt-3"><strong>Opening Hours</strong></p>
             <p><strong>Mon - Sat:</strong> 8am - 6pm</p>
             <p><strong>Sunday:</strong> 9am - 3pm</p>
-            <p class="mt-3"><strong>Phone:</strong> <span><a href="tel:+2348149225771">+234 814 92257 71</a></span></p>
+            <p class="mt-3"><strong>Phone & Email</strong></p>
+            <p><strong>Phone:</strong> <span><a href="tel:+2348149225771">+234 814 92257 71</a></span></p>
             <p><strong>Phone:</strong> <span><a href="tel:+2348097818607">+234 809 78186 07</a></span></p>
             <p><strong>Email:</strong> <a href="mailto:info@pinkclinicng.com">info@PinkClinicNG.com</a></p>
           </div>
@@ -700,22 +712,9 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#">STI Screening</a></li>
-            <li><a href="#">STI Treatment</a></li>
+            <li><a href="services.html#pricing">STI Screening</a></li>
+            <li><a href="corporatecare.html#coktailbenefits">Cocktail sets and Benefits</a></li>
             <li><a href="#">Guidance & Counselling</a></li>
-            <li><a href="#">Confidential Care</a></li>
-            <li><a href="#">View All Services</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Legal</h4>
-          <ul>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
-            <li><a href="medical-disclaimer.html">Medical Disclaimer</a></li>
-            <li><a href="cookie-policy.html">Cookie Policy</a></li>
-            <li><a href="patient-rights.html">Patient Rights</a></li>
           </ul>
         </div>
 
